issue with centering on mobiles

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     font-family: 'Kumbh Sans','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
     width: 100vw;
@@ -55,6 +55,7 @@ body::after{
 }
 
 main{
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -77,6 +78,8 @@ main{
     height: 150px;
     margin-bottom: 45px;
     background: var(--darkcyan);
+    background-repeat: no-repeat;
+    background-size: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     background-image: url(images/bg-pattern-card.svg);
